# tag-python-starter

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml
.claude/: CLAUDE.md
docs/: index.md
docs/astro/: README.md  astro.config.mjs
docs/astro/src/content/docs/api/: index.mdx
docs/astro/src/content/docs/api/package/: index.md
docs/astro/src/styles/: global.css
docs/mkdocs/: index.md
docs/mkdocs/stylesheets/: extra.css
docs/overrides/: main.html
scripts/: build_reference_docs.py  placeholder.py
src/package/: hello.py
tests/: test_package.py  test_tag_python_starter.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  Dockerfile  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/.claude/: CLAUDE.md
{{cookiecutter.project_slug}}/docs/overrides/: main.html
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: hello.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.package_name}}.py
